# JFECS

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
sources/: Component.cpp  Component.hpp  ComponentCreatedEvent.hpp  ComponentDestroyedEvent.hpp  ComponentHandler.hpp  ECSWrapper.cpp  ECSWrapper.hpp  Entity.cpp  Entity.hpp  EntityCreatedEvent.hpp  EntityDestroyedEvent.hpp  EntityHandler.hpp  EntityManager.cpp  EntityManager.hpp  EventManager.cpp  EventManager.hpp  Events.hpp  Exceptions.cpp  Exceptions.hpp  ID.cpp  ID.hpp  Internal.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp
